fixing services ui

--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/logos/rplogo.png"></a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/logos/rplogo.png"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -66,50 +66,108 @@
     </div>
   </header>
 
-  <!-- Services -->
   <section id="services">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center">
+          <h2 class="section-heading text-uppercase">Services</h2>
+          <h3 class="section-subheading text-muted">Whether your business is online or offline, we've got a solution for you.</h3>
+        </div>
+      </div>
+      <div class="row text-center">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <img class="img-fluid" src="img/portfolio/devices.png" alt="">
+          </span>
+          <h4 class="service-heading">In-store Standalone</h4>
+          <p class="text-muted">RiverPay offers multiple standalone point-of-sale terminals for merchants who want to keep their existing POS separate. Integration is quick and seamless.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <img class="img-fluid" src="img/portfolio/ecr.png" alt="">
+          </span>
+          <h4 class="service-heading">POS Integration</h4>
+          <p class="text-muted">RiverPay offers integrated solutions directly into existing cash register systems for merchants who do not want additional infrastructure. Same day integration for many POS systems.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+          <img class="img-fluid" src="img/portfolio/Shopping%20cart.png" alt="">
+          </span>
+          <h4 class="service-heading">E-commerce</h4>
+          <p class="text-muted">RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+          <img class="img-fluid" src="img/about/abt_icon5.png" alt="">
+          </span>
+          <h4 class="service-heading">Reporting and Settlement</h4>
+          <p class="text-muted">RiverPay offers real-time reporting of transactions as well as detailed daily and monthly transaction level settlement reports designed for all kinds of merchants from enterprises to SMEs.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+          <img class="img-fluid" src="img/about/abt_icon6.png" alt="">
+          </span>
+          <h4 class="service-heading">Marketing Solutions</h4>
+          <p class="text-muted">RiverPay offers customized precision marketing solutions based on data collection and analysis. Its marketing products have a proven track record of generating leads and bringing in extra revenues for merchants.</p>
+        </div>
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+          <img class="img-fluid" src="img/about/abt_icon1.png" alt="">
+          </span>
+          <h4 class="service-heading">Security and Compliance</h4>
+          <p class="text-muted">Security and Compliance
+
+            RiverPay’s services are fully PCI compliant -- card data is tokenized and never exposed during transactions. As RiverPay’s major partners, Alipay and WeChat Pay are the first mobile payment applications in the world to obtain both ISO27001 and TRUSTe certifications to eradicate fraud or chargeback.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+  <!-- Services -->
+  <section id="advantages" class="bg-gradient-gray">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Advantages of RiverPay</h2>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4" style="max-width: 25%;">
-            <img src="img/service/pt1.PNG" >
+      <div class="row" style="justify-content: center; display: flex;">
+        <div class="col-md-3">
+            <img class="img-responsive" src="img/Service/pt1.PNG" >
         </div>
-        <div class="col-md-4" style="max-width: 25%;">
-            <img src="img/service/pt2.png">
+        <div class="col-md-3">
+            <img class="img-responsive" src="img/Service/pt2.png">
         </div>
-        <div class="col-md-4" style="max-width: 25%;">
-            <img src="img/service/pt3.png" >
+        <div class="col-md-3" >
+            <img class="img-responsive" src="img/Service/pt3.png" >
         </div>
-        <div class="col-md-4 "style="max-width: 25%;">
-            <img src="img/service/pt4.png" >
+        <div class="col-md-3">
+            <img class="img-responsive" src="img/Service/pt4.png" >
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Portfolio Grid -->
-  <section class="bg-light" id="portfolio">
-        <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Our Services</h2>
-        </div>
 
-        <div class="store-soln" style="padding: 1em;"> 
-          <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
-          <img src="img/service/devices.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
-          <p style="margin-left: 25%;"> RiverPay offers multiple standalone point-of-sale terminals and integrated solutions directly into existing cashier systems for merchants to use right away. Integration will be completed in real time and there is no need to worry about reconciliation.</p>
-        </div>
-        <br>
-        <div class="online-soln" style="padding: 1em;"> 
-          <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
-          <img src="img/service/web.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
-          <p style="margin-left: 25%;"> RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
-        </div>
-      
-  </section>
+
+  <!-- Portfolio Grid -->
+  <!-- <section class="bg-light" id="portfolio">
+         <div class="col-lg-12 text-center">
+           <h2 class="section-heading text-uppercase">Our Services</h2>
+         </div>
+      <div class="store-soln" style="padding: 1em;">
+           <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
+           <img src="img/service/devices.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
+           <p style="margin-left: 25%;"> RiverPay offers multiple standalone point-of-sale terminals and integrated solutions directly into existing cashier systems for merchants to use right away. Integration will be completed in real time and there is no need to worry about reconciliation.</p>
+         </div>
+         <br>
+         <div class="online-soln" style="padding: 1em;">
+           <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
+           <img src="img/service/web.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
+           <p style="margin-left: 25%;"> RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
+         </div>
+  </section> -->
 
   <!-- Contact -->
   <section id="contact">
