--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
     <div class="container" >
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading text-uppercase">Contact us</h2>
+          <h2 class="section-heading">Contact us</h2>
         </div>
       </div>
       <div class="container" style="padding: 0">
@@ -68,7 +68,7 @@
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <div class="card">
               <div class="thumbnail text-center text-white">
-                <img class="card-img-top" style="opacity: 0.5" src="img/contact/canada_toronto.jpg" alt="">
+                <img class="card-img-top contact-card-img" style="opacity: 0.5;" src="img/contact/canada_toronto.jpg" alt="">
                 <div class="caption">
                   <p>Toronto, Canada</p>
                 </div>
@@ -82,7 +82,7 @@
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <div class="card">
               <div class="thumbnail text-center text-white">
-                <img class="card-img-top" style="opacity: 0.5" src="img/contact/cali_fremont.jpeg" alt="">
+                <img class="card-img-top contact-card-img" style="opacity: 0.5" src="img/contact/cali_fremont.jpeg" alt="">
                 <div class="caption">
                   <p>California, USA</p>
                 </div>
