--- a/career.html
+++ b/career.html
@@ -270,6 +270,12 @@ function myFunction3() {
 }
 </script>
 
+ <SCRIPT>
+  document.addEventListener("contextmenu", function(e){
+    e.preventDefault();
+}, false);
+    </SCRIPT>
+    
 </body>
 
 </html>
