--- a/service.html
+++ b/service.html
@@ -77,42 +77,42 @@
       <div class="row text-center">
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img class="img-fluid" src="img/portfolio/devices.png" alt="">
+            <img class="img-fluid" src="img/Service/instore.png" alt="">
           </span>
           <h4 class="service-heading">In-store Standalone</h4>
           <p class="text-muted">RiverPay offers multiple standalone point-of-sale terminals for merchants who want to keep their existing POS separate. Integration is quick and seamless.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-            <img class="img-fluid" src="img/portfolio/ecr.png" alt="">
+            <img class="img-fluid" src="img/Service/POS.png" alt="">
           </span>
           <h4 class="service-heading">POS Integration</h4>
           <p class="text-muted">RiverPay offers integrated solutions directly into existing cash register systems for merchants who do not want additional infrastructure. Same day integration for many POS systems.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-          <img class="img-fluid" src="img/portfolio/Shopping%20cart.png" alt="">
+          <img class="img-fluid" src="img/Service/Ecomm2.png" alt="">
           </span>
           <h4 class="service-heading">E-commerce</h4>
           <p class="text-muted">RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-          <img class="img-fluid" src="img/about/abt_icon5.png" alt="">
+          <img class="img-fluid" src="img/Service/settlement.png" alt="">
           </span>
           <h4 class="service-heading">Reporting and Settlement</h4>
           <p class="text-muted">RiverPay offers real-time reporting of transactions as well as detailed daily and monthly transaction level settlement reports designed for all kinds of merchants from enterprises to SMEs.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-          <img class="img-fluid" src="img/about/abt_icon6.png" alt="">
+          <img class="img-fluid" src="img/Service/marketingicon.png" alt="">
           </span>
           <h4 class="service-heading">Marketing Solutions</h4>
           <p class="text-muted">RiverPay offers customized precision marketing solutions based on data collection and analysis. Its marketing products have a proven track record of generating leads and bringing in extra revenues for merchants.</p>
         </div>
         <div class="col-md-4">
           <span class="fa-stack fa-4x">
-          <img class="img-fluid" src="img/about/abt_icon1.png" alt="">
+          <img class="img-fluid" src="img/Service/security.png" alt="">
           </span>
           <h4 class="service-heading">Security and Compliance</h4>
           <p class="text-muted">Security and Compliance
@@ -149,29 +149,29 @@
     </div> -->
         <div class="store-soln" style="padding: 3em;"> 
           <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
-          <img src="img/service/devices.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
+          <img src="img/service/instore.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
           <p style="margin-left: 25%;"> RiverPay offers multiple standalone point-of-sale terminals and integrated solutions directly into existing cashier systems for merchants to use right away. Integration will be completed in real time and there is no need to worry about reconciliation.</p>
         </div>
         <div class="online-soln" style="padding: 3em;"> 
           <h5 style="font-weight: 100; padding: 1em;">Online Solutions</h5>
-          <img src="img/service/web.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
+          <img src="img/Service/Ecomm2.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
           <p style="margin-left: 25%;"> RiverPay offers a full set of online API gateway to support all website or mobile payment needs. Upon enrollment, RiverPay will provide dedicated technical support to guide the setup and a typical e-commerce or m-commerce integration takes less than a week.</p>
         </div>
         <div class="report-soln" style="padding: 3em;"> 
             <h5 style="font-weight: 100; padding: 1em;">Reporting & Settlement</h5>
-            <img src="img/logo.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
+            <img src="img/Service/settlement.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
             <p style="margin-left: 25%;"> RiverPay offers real-time reporting of transactions as well as detailed daily and monthly transaction level settlement reports designed for all kinds of merchants from enterprises to SMEs.</p>
         </div>
         <br>
         <div class="market-soln" style="padding: 3em;"> 
             <h5 style="font-weight: 100; padding: 1em;">Marketing Solutions</h5>
-            <img src="img/service/marketing.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
+            <img src="img/service/marketingicon.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
             <p style="margin-left: 25%;"> RiverPay offers real-time reporting of transactions as well as detailed daily and monthly transaction level settlement reports designed for all kinds of merchants from enterprises to SMEs.</p>
         </div>
         <br>
         <div class="secure-soln" style="padding: 3em;"> 
             <h5 style="font-weight: 100; padding: 1em;">Security and Compliance</h5>
-            <img src="img/logo.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
+            <img src="img/Service/security.png" style="width: 13em; float: left; padding: 1em; padding-top: 0;">
             <p style="margin-left: 25%;"> RiverPay’s services are fully PCI compliant - card data is tokenized and never exposed during transactions. As RiverPay’s major partners, Alipay and WeChat Pay are the first mobile payment applications in the world to obtain both ISO27001 and TRUSTe certifications to eradicate fraud or chargeback.</p>
         </div>
       </div>
@@ -269,6 +269,12 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/agency.min.js"></script>
+
+  <SCRIPT>
+    document.addEventListener("contextmenu", function(e){
+      e.preventDefault();
+  }, false);
+      </SCRIPT>
 
 </body>
 
