--- a/index.html
+++ b/index.html
@@ -39,16 +39,13 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#team">Team</a>
+              <a class="nav-link js-scroll-trigger" href="service.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="career.html">Career</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
@@ -62,31 +59,37 @@
   <header class="masthead" style="background-image: url('./img/bg.jpg');">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in" style="color: white">Grow your business through 1 billion Chinese Consumers with</div>
+        <div class="intro-lead-in" style="color: white">Grow your business through one billion Chinese consumers with</div>
         <div class="intro-heading text-uppercase" style="color: #45aed6; font-size: xx-large"><img src="img/logos/rplogo.png"></div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="background-color: #45aed6; border-color: #45aed6;" href="about.html">Tell Me More</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" style="background-color: #45aed6; border-color: #45aed6;" href="#Intro">Tell Me More</a>
       </div>
     </div>
   </header>
 
 
-  <section class="services bg-light">
+  <section id="Intro" class="services bg-light">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Proud partners of Alipay, WeChat Pay and UnionPay</h2>
-          <h3 class="section-subheading text-muted">Anywhere in the world, we've got you covered.</h3>
+          <h3 class="section-subheading text-muted" style="text-align: center;">Anywhere in the world, we've got you covered.</h3>
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-4 col-sm-7">
-            <img class="img-fluid d-block mx-auto" src="img/logos/Alipay_logo.png" alt="">
+      <div class="row text-center">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <img src="img/about/alipay2.PNG" style="max-width: 95%;">
+          </span>
         </div>
-        <div class="col-md-4 col-sm-7">
-            <img class="img-fluid d-block mx-auto" src="img/logos/wechatpay.png" alt="">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <img src="img/about/wechat.png" style="max-width: 95%;">
+          </span>
         </div>
-        <div class="col-md-4 col-sm-7">
-            <img class="img-fluid d-block mx-auto" src="img/logos/UnionPay_logo.png" alt="">
+        <div class="col-md-4">
+          <span class="fa-stack fa-4x">
+            <img src="img/about/unionpay.png" style="max-width: 75%;">
+          </span>
         </div>
       </div>
       <br>
@@ -99,12 +102,12 @@
   </section>
 
   <!-- Services -->
-  <section id="services">
+  <!--<section id="services">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Services</h2>
-          <h3 class="section-subheading text-muted">Whether your business is online or offline, we've got a solution for you.</h3>
+          <h3 class="section-subheading text-muted" style="text-align: center;">Whether your business is online or offline, we've got a solution for you.</h3>
         </div>
       </div>
       <div class="row text-center">
@@ -131,7 +134,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section>-->
 
   <!-- Portfolio Grid -->
   <!-- <section class="bg-light" id="portfolio">
@@ -519,7 +522,7 @@
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Contact Us</h2>
-          <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+          <h3 class="section-subheading" style="color: white;">Feel free to contact us with anything related to our products/services. We’ll respond as soon as possible.</h3>
         </div>
       </div>
       <div class="row">
@@ -563,36 +566,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4">
-          <span class="copyright">Copyright &copy; RiverPay Inc. 2019</span>
-        </div>
-        <div class="col-md-4">
-          <ul class="list-inline social-buttons">
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-twitter"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-facebook-f"></i>
-              </a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">
-                <i class="fab fa-linkedin-in"></i>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <ul class="list-inline quicklinks">
-            <li class="list-inline-item">
-              <a href="#">Privacy Policy</a>
-            </li>
-            <li class="list-inline-item">
-              <a href="#">Terms of Use</a>
-            </li>
-          </ul>
+          <span class="copyright">Copyright &copy; RiverPay 2019</span>
         </div>
       </div>
     </div>
