--- a/service.html
+++ b/service.html
@@ -125,13 +125,13 @@
 
 
   <!-- Services -->
-  <section id="advantages" class="bg-gradient-gray">
+  <!-- <section id="advantages" class="bg-gradient-gray">
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading text-uppercase">Advantages of RiverPay</h2>
         </div>
-      <!-- </div>
+      </div>
       <div class="row" style="justify-content: center; display: flex;">
         <div class="col-md-3">
             <img class="img-responsive" src="img/Service/pt1.PNG" >
@@ -146,7 +146,7 @@
             <img class="img-responsive" src="img/Service/pt4.png" >
         </div>
       </div>
-    </div> -->
+    </div> 
         <div class="store-soln" style="padding: 3em;"> 
           <h5 style="font-weight: 100; padding: 1em;">In Store Solutions</h5>
           <img src="img/service/instore.png" style="width: 15em; float: left; padding: 1em; padding-top: 0;">
@@ -176,7 +176,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
 
 
