--- a/career.html
+++ b/career.html
@@ -31,7 +31,7 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
     <div class="container">
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">RiverPay</a>
+      <a class="navbar-brand js-scroll-trigger" href="index.html"><img src="img/logos/rplogo.png"></a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
         Menu
         <i class="fas fa-bars"></i>
@@ -91,7 +91,7 @@
       </div>
 
     <div id="canID">
-            <h1 style="font-weight: 400;">HR</h1>
+            <h1 style="font-weight: 400;">PR</h1>
 
            <p>We are a FinTech Company, hiring for our Toronto office based near the Airport. We are looking for an individual with 3-5 years of Public Relations experience to join our team to assist with managing PR News Release, Media relationship.</p>
             <br>
@@ -140,7 +140,7 @@
             <ul>Self-starter who is ready to dive in right away and start pitching.</ul>
             <ul>An understanding of data and how to use it to enhance media stories.</ul>
             <ul>Excellent writing and communication skills.</ul>
-            <a href="mailto:wendy.yang@riverpayment.com?Subject=Job%20Application" target="_top" style="text-align: center; color: black; display: block; padding-top: 2em; text-decoration: underline;">Email us your application</a>
+            <a href="mailto:info@riverpayment.com?Subject=Job%20Application" target="_top" style="text-align: center; color: black; display: block; padding-top: 2em; text-decoration: underline;">Email us your application</a>
             </div>
 
     <div id="chinID">
