--- a/contact.html
+++ b/contact.html
@@ -68,9 +68,23 @@
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <div class="card">
               <div class="thumbnail text-center text-white">
-                <img class="card-img-top contact-card-img" style="opacity: 0.5;" src="img/contact/canada_toronto.jpg" alt="">
+                <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/canada_toronto.jpg" alt="">
                 <div class="caption">
-                  <p>Toronto, Canada</p>
+                  <p><u>Toronto, Canada</u></p>
+              </div>
+              </div>
+              <div class="card-body">
+                <p class="card-text text-center">5045 Orbitor Drive.<br>
+                  Mississauga, Ontario. <br> L4W 4Y4, Canada.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-4 col-xs-4 thumb">
+            <div class="card">
+              <div class="thumbnail text-center text-white">
+                <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/cali_fremont.jpeg" alt="">
+                <div class="caption">
+                  <p><u>California, USA</u></p>
                 </div>
               </div>
               <div class="card-body">
@@ -82,9 +96,9 @@
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
             <div class="card">
               <div class="thumbnail text-center text-white">
-                <img class="card-img-top contact-card-img" style="opacity: 0.5" src="img/contact/cali_fremont.jpeg" alt="">
+                <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/shanghai.jpg" alt="">
                 <div class="caption">
-                  <p>California, USA</p>
+                  <p><u>Shanghai, China</u></p>
                 </div>
               </div>
               <div class="card-body">
@@ -93,34 +107,53 @@
               </div>
             </div>
           </div>
-          <div class="col-lg-4 col-md-4 col-xs-4 thumb">
-            <a class="thumbnail" href="#">
-              <img class="img-fluid" src="img/contact/canada_toronto.jpg" alt="">
-            </a>
-          </div>
         </div>
       </div>
 
       <br>
       <br>
       <div class="container shadow-sm" style="background-color: white">
-        <div class="row">
-          <div class="col-md-6" style="padding: 5%">
-            <h5><strong>Customer Support</strong></h5>
-            <p class="small">P: <a>+1 (888) 875-4079</a> <br>
-              W: riverpayment.com <br>
-              E: info@riverpayment.com</p>
+      <div class="row">
+        <div class="col-md-6" style="padding: 5%">
+          <h3>Send us a message</h3>
+          <p>Feel free to contact us with anything related to our products/services. We’ll respond as soon as possible.</p>
+          <div class="form-group">
+            <input class="form-control input-bg" id="name" type="text" placeholder="Your Name *" required="required" data-validation-required-message="Please enter your name.">
+            <p class="help-block text-danger"></p>
           </div>
-          <div class="col-md-6" style="padding: 5%">
-            <h5><strong>Our Office</strong></h5>
-            <p class="small">5045 Orbitor Drive, Building 12, Suite 202, <br>
-              Mississauga, ON L4W 4Y4, Canada
-            </p>
+          <div class="form-group">
+            <input class="form-control input-bg" id="email" type="email" placeholder="Your Email *" required="required" data-validation-required-message="Please enter your email address.">
+            <p class="help-block text-danger"></p>
           </div>
+          <div class="form-group">
+            <input class="form-control input-bg" id="phone" type="tel" placeholder="Your Phone *" required="required" data-validation-required-message="Please enter your phone number.">
+            <p class="help-block text-danger"></p>
+          </div>
+          <div class="form-group">
+            <textarea class="form-control input-bg" id="message" placeholder="Your Message *" required="required" data-validation-required-message="Please enter a message."></textarea>
+            <p class="help-block text-danger"></p>
+          </div>
+          <div class="form-group">
+            <div id="success"></div>
+            <button id="sendMessageButton" class="btn btn-primary btn-sm" type="submit">Submit</button>
+          </div>
+        </div>
+        <div class="col-md-6" style="padding: 5%">
+          <h3><strong>Customer Support</strong></h3>
+          <br>
+          <br>
+          <p class="small"><img src="img/contact/image%203.png" style="float: left; padding: 10px"><span><h6>Call us:</h6></span>
+            <p>+1 (888) 875-4079</p>
+          <br>
+          <img src="img/contact/image%204.png" style="float: left; padding: 10px"><span ><h6 style="margin-top: 4%">Email us:</h6></span>
+          info@riverpayment.com</p>
         </div>
       </div>
     </div>
+    </div>
   </section>
+
+
 
   <!-- Footer -->
   <footer>
