making contact page nicer

--- a/contact.html
+++ b/contact.html
@@ -57,7 +57,7 @@
 
   <!-- Services -->
   <section id="services" class="bg-light">
-    <div class="container" >
+    <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
           <h2 class="section-heading">Contact us</h2>
@@ -66,7 +66,7 @@
       <div class="container" style="padding: 0">
         <div class="row">
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
-            <div class="card">
+            <div class="card shadow">
               <div class="thumbnail text-center text-white">
                 <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/canada_toronto.jpg" alt="">
                 <div class="caption">
@@ -80,7 +80,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
-            <div class="card">
+            <div class="card shadow">
               <div class="thumbnail text-center text-white">
                 <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/cali_fremont.jpeg" alt="">
                 <div class="caption">
@@ -94,7 +94,7 @@
             </div>
           </div>
           <div class="col-lg-4 col-md-4 col-xs-4 thumb">
-            <div class="card">
+            <div class="card shadow">
               <div class="thumbnail text-center text-white">
                 <img class="card-img-top contact-card-img" style="filter: brightness(50%)" src="img/contact/shanghai.jpg" alt="">
                 <div class="caption">
@@ -112,7 +112,7 @@
 
       <br>
       <br>
-      <div class="container shadow-sm" style="background-color: white">
+      <div class="container shadow" style="background-color: white">
       <div class="row">
         <div class="col-md-6" style="padding: 5%">
           <h3>Send us a message</h3>
